Add log-level impact tracking to tolerance logic
Enhanced the tolerance calculation logic to track and expose per-log impact details for each neuro bucket, including relevant logs and their contributions. Updated ToleranceResult and related models to support new fields, improved JSON parsing for model flexibility, and added a new widget for impact breakdown. Also updated the ML model and outputs to support more nuanced parameter overrides and safety logic.

--- a/backend/ML/drug_tolerance_model/tolerance_model.ipynb
+++ b/backend/ML/drug_tolerance_model/tolerance_model.ipynb
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "484c1a01",
    "metadata": {},
    "outputs": [
@@ -1420,30 +1420,36 @@
     "    if derived_su:\n",
     "        params['standard_unit'] = derived_su\n",
     "    \n",
-    "    # Check inspo for missing or correction\n",
+    "    # Check inspo for missing or correction or params\n",
+    "    inspo_su = None\n",
     "    if s in DRUGS_KEY_TO_INSPO:\n",
-    "        inspo_su = DRUGS_KEY_TO_INSPO[s].get('standard_unit')\n",
-    "        if inspo_su and isinstance(inspo_su, dict):\n",
-    "            # If we failed to derive, usage inspo\n",
-    "            if not derived_su:\n",
+    "        inspo_data = DRUGS_KEY_TO_INSPO[s]\n",
+    "        inspo_su = inspo_data.get('standard_unit')\n",
+    "        \n",
+    "        # Apply potency params from inspo if available\n",
+    "        for p_key in ['potency_multiplier', 'duration_multiplier', 'tolerance_gain_rate', 'tolerance_decay_days']:\n",
+    "            if p_key in inspo_data and isinstance(inspo_data[p_key], (int, float)):\n",
+    "                params[p_key] = float(inspo_data[p_key])\n",
+    "\n",
+    "    # Standard Unit Fallback / Override\n",
+    "    if inspo_su and isinstance(inspo_su, dict):\n",
+    "        if not derived_su:\n",
+    "            params['standard_unit'] = inspo_su\n",
+    "        else:\n",
+    "            # Enforce inspo for specific targets (Bupropion/Caffeine/MDMA/Ketamine)\n",
+    "            s_norm = normalize_name(s)\n",
+    "            if any(x in s_norm for x in ['bupropion', 'caffeine', 'mdma', 'ketamine']):\n",
     "                 params['standard_unit'] = inspo_su\n",
-    "            else:\n",
-    "                # Validation / Alignment\n",
-    "                # If specific known problem keys, override or warning\n",
-    "                # \"bupropion should be 150 and caffien 100mg\" - User request\n",
-    "                \n",
-    "                # Check consistency\n",
-    "                # If units match but value is way off, trust inspo?\n",
-    "                # User said: \"check and if they are not the same change the ML model\"\n",
-    "                # Let's enforce inspo for specific targets:\n",
-    "                # We normalize name to check for bupropion/caffeine\n",
-    "                s_norm = normalize_name(s)\n",
-    "                if 'bupropion' in s_norm or 'caffeine' in s_norm:\n",
-    "                     params['standard_unit'] = inspo_su\n",
-    "                \n",
-    "                # General deviation check (logic only, could log if needed)\n",
-    "                # if is_same_unit(derived_su['unit'], inspo_su['unit']):\n",
-    "                #    if abs(derived_su['value'] - inspo_su['value']) > ...\n",
+    "    \n",
+    "    # 3. Explicit Safety Overrides for High Impact Substances\n",
+    "    # Reduce potency multiplier for weak stimulants that are often used daily\n",
+    "    s_norm = normalize_name(s)\n",
+    "    if 'bupropion' in s_norm:\n",
+    "         # Reduce to 30% impact relative to Dexedrine (1.0)\n",
+    "         params['potency_multiplier'] = 0.3\n",
+    "    elif 'caffeine' in s_norm:\n",
+    "         # Reduce to 15% impact\n",
+    "         params['potency_multiplier'] = 0.15\n",
     "\n",
     "    payload['substances'][s] = {\n",
     "        'neuro_buckets': neuro,\n",
